# pedsim_ros

./: .gitignore  .gitmodules  CMakeLists.txt  FindQwt.cmake  History.md  LICENSE  README.md  package.xml  sgdicop.qrc
pedsim/: CMakeLists.txt  package.xml
pedsim/src/: ped_agent.cpp  ped_angle.cpp  ped_vector.cpp  ped_waypoint.cpp
pedsim_gazebo_plugin/: CMakeLists.txt  README.md  package.xml
pedsim_gazebo_plugin/env-hooks/: gazebo_plugins.sh.in
pedsim_gazebo_plugin/launch/: airport.launch  gazebo_demo_launch.py  gazebo_tb3_house_demo_launch.py  house_demo.launch  house_demo_launch.py  social_contexts.launch
pedsim_gazebo_plugin/models/: actor_model.config  actor_model.sdf
pedsim_gazebo_plugin/scripts/: pedsim_to_gazebo_world.py  spawn_pedsim_agents.py  spawn_single_agent.py
pedsim_gazebo_plugin/src/: actor_poses_plugin.cpp  spawn_pedsim_agents.cpp
pedsim_gazebo_plugin/worlds/: GrannyAnnie.world  airport.world  empty.world  house.world  office-cubicles.world  scene1.world  scene2.world  scene3.world  scene4.world  small_airport.world  social_activities.world  social_contexts.world  tb3_house_demo_crowd.world  warehouse.world
pedsim_msgs/: CMakeLists.txt  package.xml
pedsim_msgs/msg/: AgentGroup.msg  AgentGroups.msg  AgentState.msg  AgentStates.msg  LineObstacles.msg  SocialActivities.msg  SocialRelations.msg  TrackedGroup.msg  TrackedGroups.msg  TrackedPerson.msg  TrackedPersons.msg  Waypoint.msg
pedsim_ros/: CMakeLists.txt  package.xml
pedsim_rviz_plugin/: CMakeLists.txt  LICENSE  README.md  package.xml  plugins_description.xml
pedsim_rviz_plugin/scripts/: send_test_msgs.py
pedsim_rviz_plugin/src/: detected_persons_display.cpp  person_display_common.cpp  tracked_groups_display.cpp  tracked_persons_display.cpp
pedsim_sensors/: CMakeLists.txt  package.xml
pedsim_sensors/launch/: obstacle_pcd_sensor.launch  occlusion_pcd_sensor.launch  pcd_sensor.launch  people_pcd_sensor.launch
pedsim_simulator/: CMakeLists.txt  Doxyfile  PedSimConfig.cmake  package.xml  pedsim_xml_to_occ_map.sh
pedsim_simulator/config/: PedsimSimulator.cfg  params.yaml  simulation_parameters.yaml
pedsim_simulator/images/: darylbot_rotated_shifted.dae  kiosk.dae  man.3ds
pedsim_simulator/launch/: airport_activities.launch  airport_demo.launch  behaviour_demo.launch  demo_formations.launch  group_nav.launch  house_demo_crowd_launch.py  house_demo_launch.py  office.launch  office_launch.py  robot_controller.launch  simple_pedestrians.launch  simulator.launch  simulator_launch.py  social_contexts.launch  social_contexts_activities.launch  social_contexts_batman.launch  social_contexts_gazebo.launch  social_contexts_lab_experiment.launch  social_contexts_multiple_groups.launch  social_contexts_rss_scenario_one.launch  social_contexts_rss_scenario_two.launch  social_contexts_single_agent.launch  social_contexts_single_group.launch  social_contexts_timm.launch  sources_and_sinks.launch  start_simulation.launch  teleop_keyboard.launch  warehouse.launch
pedsim_simulator/maps/: airport.yaml  airport2.yaml  airport_activities.pgm  airport_activities.yaml  airport_activities2.yaml  blank_world.yaml  corridor.pgm  corridor.yaml  map.pgm  map.yaml  office-cubicles.pgm  office-cubicles.yaml  office.pgm  office.yaml  scene1.pgm  scene1.yaml  scene2.pgm  scene2.yaml  scene3.yaml  scene4.pgm  scene4.yaml  singleagent.pgm  singleagent.yaml  small_airport.yaml  social_contexts.yaml  tb3_house_demo_crowd.pgm  tb3_house_demo_crowd.yaml  warehouse.pgm  warehouse.yaml
pedsim_simulator/rviz/: airport.rviz  airport_activities.rviz  behaviour.rviz  demo.rviz  demo_formations.rviz  feature_test.rviz  group_nav.rviz  pedsim.rviz  scene1.rviz  scene2.rviz  scene3.rviz  social_contexts.rviz  social_contexts_activities.rviz  social_contexts_batman.rviz  social_contexts_rss_scenario_one.rviz  social_contexts_timm.rviz  sources_and_sinks.rviz
pedsim_simulator/scenarios/: airport.xml  airport2.xml  airport_activities.xml  airport_activities2.xml  birth_death_test_small.xml  blank_world.xml  corridor.xml  cross_enemy.xml  cross_friendly.xml  demo_behaviours.xml  feature_test.xml  follow_enemy.xml  follow_friendly.xml  lab_experiment.xml  multiplegroups.xml  office-cubicles.xml  office.xml  rss_scenario_one.xml  rss_scenario_two.xml  scenario_info_screen.xml  scene1.xml  scene1_queues.xml  scene2.xml  scene3.xml  scene4.xml  singleagent.xml  singlegroup.xml  small_airport.xml  small_dynamic.xml  social_contexts.xml  social_contexts_dynamic.xml  social_contexts_small.xml  static_group_nav.xml  static_group_nav_bitstar.xml  tb3_house_demo_crowd.xml  turtlebot3_house.xml  warehouse.xml
pedsim_simulator/scripts/: data_logger.py  dummy_transforms.py  keyboard_teleop.py  metrics_logger.py  mock_static_scene.py  mockgroups_info_screen.py  mockgroups_rss_scenario_one.py  mockgroups_rss_scenario_two.py  mocktracks_info_screen.py  mocktracks_rss_scenario_one.py  mocktracks_rss_scenario_one_static.py  mocktracks_rss_scenario_two.py  scenario_to_png.py
pedsim_simulator/src/: agent.cpp  agent.h  agentstatemachine.cpp  config.cpp  obstacle.cpp  obstacle.h  orientationhandler.cpp  pedsim_xml_to_occ_map.cpp  persongroup.cpp  rng.cpp  robot_teleop.cpp  robot_teleop_joystick.cpp  robot_teleop_joystick_vxy.cpp  robot_teleop_keyboard.cpp  scenarioreader.cpp  scene.cpp  scene.h  simulate_diff_drive_robot.cpp  simulator.cpp  simulator_node.cpp  waitingqueue.cpp  waitingqueue.h  waypoint.cpp  waypoint.h
pedsim_srvs/: CMakeLists.txt  package.xml
pedsim_srvs/srv/: GetAgentState.srv  GetAllAgentsState.srv  SetAgentState.srv  SetAllAgentsState.srv
pedsim_tf2/: CMakeLists.txt  package.xml
pedsim_tf2/src/: pedsim_tf2_node.cpp
pedsim_utils/: CMakeLists.txt  package.xml
pedsim_visualizer/: CMakeLists.txt  package.xml
pedsim_visualizer/config/: PedsimVisualizer.cfg
pedsim_visualizer/launch/: visualizer.launch  visualizer_launch.py
pedsim_visualizer/src/: sim_visualizer.cpp  sim_visualizer_node.cpp
sensors/pedsim_point_clouds/: CMakeLists.txt  package.xml
visualization/spencer_tracking_rviz_plugin/: CMakeLists.txt  (+1 more)
(+273 files in other folders)
