<?xml version="1.0"?>
<package format="2">
  <name>pedsim_gazebo_plugin</name>
  <version>0.0.0</version>
  <description>The pedsim_gazebo_plugin package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="mahmoud@todo.todo">mahmoud</maintainer>
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>

<build_depend>pedsim_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>

  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>pedsim_msgs</build_export_depend>


  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pedsim_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <export>

  </export>
</package>
