<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pedsim_ros</name>
  <version>0.2.0</version>
  <description>
    ROS based pedestrian simulator using social forces model
  </description>
  <maintainer email="okal@cs.uni-freiburg.de">Billy Okal</maintainer>
  <maintainer email="jonatan.gines@urjc.es">Jonatan Gines</maintainer>

  <license>BSD</license>

  <author email="okal@cs.uni-freiburg.de">Billy Okal</author>
  <author email="linder@cs.uni-freiburg.de">Timm Linder</author>
  <author email="palmieri@cs.uni-freiburg.de">Luigi Palmieri</author>
  <author email="omar@email.todo">Omar Islas</author>
  <author email="mail@svenwehner.de">Sven Wehner</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>pedsim</exec_depend>
  <exec_depend>pedsim_msgs</exec_depend>
  <exec_depend>pedsim_simulator</exec_depend>
  <exec_depend>pedsim_srvs</exec_depend>
  <exec_depend>pedsim_utils</exec_depend>
  <exec_depend>pedsim_sensors</exec_depend>
  <exec_depend>pedsim_visualizer</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
